--- a/augmentations/config.ini
+++ b/augmentations/config.ini
@@ -5,11 +5,11 @@ query_tLoc_tContr = select tc.ContractID,tc.PerilSetCode as ContractPerilSetCode
 
 [dbconnection]
 Driver={SQL Server}
-Server=10.211.36.107
-Database=AIRExp_SampleData
-ID=ram
-PWD=Xceedance1.
-TrustedConnection=No
+Server=<Server Name>
+Database=<Database Name>
+ID=<UserID>
+PWD=<Password>
+TrustedConnection=<Yes or NO>
 
 [loggerdetails]
 filepath=conversion.log
