updated peril mapping

--- a/augmentations/config.ini
+++ b/augmentations/config.ini
@@ -11,6 +11,13 @@ ID=<UserID>
 PWD=<Password>
 TrustedConnection=<Yes or NO>
 
+Driver={SQL Server}
+Server=<Server Name>
+Database=<Database Name>
+ID=<UserID>
+PWD=<Password>
+TrustedConnection=<Yes or NO>
+
 [loggerdetails]
 filepath=conversion.log
 format=%(asctime)s %(levelname)s %(message)s
