--- a/augmentations/config.ini
+++ b/augmentations/config.ini
@@ -11,6 +11,7 @@ ID=<UserID>
 PWD=<Password>
 TrustedConnection=<Yes or NO>
 
+[reference_dbconnection]
 Driver={SQL Server}
 Server=<Server Name>
 Database=<Database Name>
