Location file updates

--- a/augmentations/location_direct_mapping.json
+++ b/augmentations/location_direct_mapping.json
@@ -103,4 +103,6 @@
 "BuildingExteriorOpening":"BuildingExteriorOpeningCode",
 "ServiceEquipmentProtection":"ServiceEquipmentProtectionCode",
 "TallOneStory":"TallOneStoryCode",
-"TerrainRoughness":"TerrainRoughnessCode"}
+"TerrainRoughness":"TerrainRoughnessCode",
+"GeogName1":"SubareaName",
+"GeogName2":"Subarea2Name"}
