New CondNumber/Name logic

--- a/augmentations/location_direct_mapping.json
+++ b/augmentations/location_direct_mapping.json
@@ -97,7 +97,7 @@
 "Chimney":"ChimneyCode",
 "BrickVeneer":"BrickVeneerCode",
 "FEMACompliance":"FIRMComplianceCode",
-"CustomFloodSOP":"CustomFloodStandardOfProtection",
+"FloodDefenseHeight":"CustomFloodStandardOfProtection",
 "CustomFloodZone":"CustomFloodZoneCode",
 "MultiStoryHall":"MultiStoryHallCode",
 "BuildingExteriorOpening":"BuildingExteriorOpeningCode",
