--- a/augmentations/config.ini
+++ b/augmentations/config.ini
@@ -12,19 +12,19 @@ query_tlc_distinct = select distinct ContractSID,AppliesToTag,LayerConditionSID 
 
 [dbconnection]
 Driver={SQL Server}
-Server=BHLP-NDA-1177\SQLEXPRESS
-Database=AIRExp_SampleData
-ID=ram
-PWD=Xceedance1.
-TrustedConnection=No
+Server=<Server Name>
+Database=<Database Name>
+ID=<UserID>
+PWD=<Password>
+TrustedConnection=<Yes or NO>
 
 [reference_dbconnection]
 Driver={SQL Server}
-Server=BHLP-NDA-1177\SQLEXPRESS
-Database=AIRReference_CEDE
-ID=ram
-PWD=Xceedance1.
-TrustedConnection=No
+Server=<Server Name>
+Database=<Database Name>
+ID=<UserID>
+PWD=<Password>
+TrustedConnection=<Yes or NO>
 
 [loggerdetails]
 filepath=..\output\conversion.log
