--- a/augmentations/address_match_mapping.json
+++ b/augmentations/address_match_mapping.json
@@ -1,1 +1,2 @@
-{"USER":1,"ADDR":2,"POST":7,"CITY":8,"AREA":9,"CRES":10,"ZIP9":5,"CNTY":20,"NONE": 0}
+{"USER":1,"ADDR":2,"POST":7,"CITY":8,"AREA":9,"CRES":10,"ZIP9":5,"COUN":20,"NONE": 0,"RLXA": "","CNTY": "","DISAG": "","POINT": "","SUB2": ""}
+
