auto-beautifyed for readibility

--- a/augmentations/account_direct_mapping.json
+++ b/augmentations/account_direct_mapping.json
@@ -1,25 +1,27 @@
-{"PortNumber":"ExposureSetName",
-"AccNumber":"ContractID",
-"AccName":"InsuredName",
-"AccStatus":"SubmitStatusCode",
-"ExpiringAccNumber":"ExpiringContractID",
-"AccCurrency":"CurrencyCode",
-"AccUserDef1":"UserDefined1",
-"AccUserDef2":"UserDefined2",
-"AccUserDef3":"UserDefined3",
-"AccUserDef4":"UserDefined4",
-"AccUserDef5":"UserDefined5",
-"PolNumber":"LayerID",
-"PolInceptionDate":"InceptionDate",
-"PolExpiryDate":"ExpirationDate",
-"ProducerName":"ProducerName",
-"Underwriter":"Underwriter",
-"BranchName":"Branch",
-"LOB":"UserLineOfBusiness",
-"PolGrossPremium":"Premium",
-"AccPeril":"tcPerilSetCode",
-"PolPerilsCovered":"tlPerilSetCode",
-"PolPeril":"tlPerilSetCode",
-"CondPeril":"tlcPerilSetCode",
-"CondName":"CondName",
-"CondNumber":"CondNumber"}
+{
+    "PortNumber": "ExposureSetName",
+    "AccNumber": "ContractID",
+    "AccName": "InsuredName",
+    "AccStatus": "SubmitStatusCode",
+    "ExpiringAccNumber": "ExpiringContractID",
+    "AccCurrency": "CurrencyCode",
+    "AccUserDef1": "UserDefined1",
+    "AccUserDef2": "UserDefined2",
+    "AccUserDef3": "UserDefined3",
+    "AccUserDef4": "UserDefined4",
+    "AccUserDef5": "UserDefined5",
+    "PolNumber": "LayerID",
+    "PolInceptionDate": "InceptionDate",
+    "PolExpiryDate": "ExpirationDate",
+    "ProducerName": "ProducerName",
+    "Underwriter": "Underwriter",
+    "BranchName": "Branch",
+    "LOB": "UserLineOfBusiness",
+    "PolGrossPremium": "Premium",
+    "AccPeril": "tcPerilSetCode",
+    "PolPerilsCovered": "tlPerilSetCode",
+    "PolPeril": "tlPerilSetCode",
+    "CondPeril": "tlcPerilSetCode",
+    "CondName": "CondName",
+    "CondNumber": "CondNumber"
+}
