--- a/augmentations/unit_mapping.json
+++ b/augmentations/unit_mapping.json
@@ -1,1 +1,8 @@
-{"SQFT":11,"FT":1,"MI":4,"M":2,"AC":13,"HA":14}
+{
+    "SQFT": 11,
+    "FT": 1,
+    "MI": 4,
+    "M": 2,
+    "AC": 13,
+    "HA": 14
+}
