added unmapped AIR peril codes

--- a/augmentations/peril_mapping.json
+++ b/augmentations/peril_mapping.json
@@ -1,4 +1,5 @@
 {
+    "AG": "BFR",
     "CF": "WSS",
     "EQ": "QEQ",
     "FF": "QFF",
@@ -7,7 +8,9 @@
     "LQ": "QLF",
     "LS": "QLS",
     "NC": "BFR",
+    "PD": "BFR",
     "PF": "OO1",
+    "PN": "BFR",
     "SL": "QSL",
     "ST": "XX1",
     "SU": "WSS",
